[metadata]
name = grave-settings
version = attr: grave_settings.VERSION
author = Ryan McConnell
description = A library for automatic serialization of python object hierarchies to storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ILikesCaviar/ObserverHooks
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
[options]
package_dir =
	=src
packages = find:
python_requires = >=3.0
include_package_data = False
[options.packages.find]
where = src
